@@ -245,6 +245,7 @@ all_tests =					\
   tests/misc/test.pl				\
   tests/misc/seq.pl				\
   tests/misc/seq-epipe.sh			\
+  tests/misc/seq-extra-number.sh		\
   tests/misc/seq-io-errors.sh			\
   tests/misc/seq-locale.sh			\
   tests/misc/seq-long-double.sh			\
